Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25286

[cppcheck] Class QQuickVisualDataGroupEmitter which is inherited by class QQuickVisualDataModelPrivate does not have a virtual destructor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0
    • 5.0.0
    • None
    • qtdeclarative 16d7e13a541d479ae5278f3ef8dfb60a64f162fe

      cppcheck reports the following error in qquickvisualdatamodel_p_p.h:

      [./src/quick/items/qquickvisualdatamodel_p_p.h:174]: (error) Class QQuickVisualDataGroupEmitter which is inherited by class QQuickVisualDataModelPrivate does not have a virtual destructor

      The report seems valid to me. QQuickVisualDataGroupEmitter holds a "QIntrusiveListNode emitterNode", which itself has a non-trivial destructor. Will the lack of a virtual destructor in QQuickVisualDataGroupEmitter prevent that from being called?

        For Gerrit Dashboard: QTBUG-25286
        # Subject Branch Project Status CR V

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            rmcgover Rohan McGovern (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes