Add a virtual destructor to QQuickVisualDataGroupEmitter.

Not strictly necessary since pointers to that type are not used to
destroy objects implementing the interface.  But there's no harm and
it will keep well meaning static analysis tools happy.

Task-number: QTBUG-25286
Change-Id: I84dd59798d08566f34bdfe0f3774dfcf5a8a96e2
Reviewed-by: Martin Jones <martin.jones@nokia.com>